# CAAF

./: .cursor-settings.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  SETUP.md  environment.yml  main.py  pyproject.toml
caaf/core/: base_agent.py  base_model.py  config.py  exceptions.py
caaf/persistence/: agent_memory.py  conversation_manager.py
config/: config.example.yaml
